virt/adminnetpol-ssh.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-ssh-from-openshift-cnv
spec:
  priority: 50
  subject:
    namespaces: {}
  ingress:
  - name: "allow-ssh-from-openshift-cnv"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: openshift-cnv
    ports:
        - protocol: TCP
          port: 22
